# AKAD-Vulkan

./: CMakeLists.txt  README.md
shaders/: triangle.frag  triangle.vert  triangle_mesh.vert
src/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
src/linearColors/: CMakeLists.txt  main.cpp
src/linearColors/include/: vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h  vk_utils.h
src/linearColors/src/: main.cpp  vk_images.cpp  vk_initializers.cpp  vk_pipelines.cpp  vk_utils.cpp
src/rotatingCubes/: CMakeLists.txt
